remove some feature

--- a/layouts/partials/author.html
+++ b/layouts/partials/author.html
@@ -1,5 +1,5 @@
 <div itemprop="author" itemscope itemtype="http://schema.org/Person">
   <section>
-	<h5 align="footer">Best regards,Daisy Lai</h5>
+	<p text-align="left">Best regards,Daisy Lai</p>
   </section>
 </div>
