--- a/layouts/partials/follow.html
+++ b/layouts/partials/follow.html
@@ -1,4 +1,5 @@
 <div id="follow-icons">
 	<a href="https://github.com/strongpaopaotang" rel="me"><i class="fa fa-github-square fa-2x"></i></a>
 	<a href="{{ .Site.BaseURL }}index.xml" rel="me"><i class="fa fa-rss-square fa-2x"></i></a> 
+	<a href="mailto:daisymoonhei@163.com?" rel="me"><i class="email rrssb-buttons clearfix"></i></a>
 </div>  
