--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -75,4 +75,5 @@
 
             {{ partial "follow.html" . }}
             {{ partial "navigation.html" . }}
+			{{ partial "tags.html" . }}
         </header>
